--- a/package.json
+++ b/package.json
@@ -10,9 +10,52 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/messaging": "^22.4.0",
+    "@react-native/new-app-screen": "0.80.2",
+    "@react-navigation/bottom-tabs": "^7.4.4",
+    "@react-navigation/drawer": "^7.5.5",
+    "@react-navigation/native": "^7.1.16",
+    "@react-navigation/stack": "^7.4.4",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-query": "^5.84.0",
+    "axios": "^1.11.0",
+    "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-native": "0.80.2",
-    "@react-native/new-app-screen": "0.80.2"
+    "react-native-calendars": "^1.1313.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-date-picker": "^5.0.13",
+    "react-native-device-info": "^14.0.4",
+    "react-native-elements": "^3.4.3",
+    "react-native-flash-message": "^0.4.2",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.27.2",
+    "react-native-hook-form": "^1.0.12",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-paper": "^5.14.5",
+    "react-native-pdf": "^6.7.7",
+    "react-native-permissions": "^5.4.2",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-reanimated": "^4.0.1",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1",
+    "react-native-share": "^12.1.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^15.12.1",
+    "react-native-svg-transformer": "^1.5.1",
+    "react-native-toast-message": "^2.3.3",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.4.1",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
