--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/messaging": "^22.4.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/bottom-tabs": "^7.4.4",
     "@react-navigation/drawer": "^7.5.5",
@@ -22,6 +23,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.84.0",
     "axios": "^1.11.0",
+    "lottie-react-native": "^7.3.2",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-native": "0.80.2",
