--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.84.0",
     "axios": "^1.11.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "lottie-react-native": "^7.3.2",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
@@ -52,6 +53,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.12.1",
     "react-native-svg-transformer": "^1.5.1",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.4.1",
