--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.80.2",
     "react-native-calendars": "^1.1313.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-config": "^1.5.6",
     "react-native-date-picker": "^5.0.13",
     "react-native-device-info": "^14.0.4",
     "react-native-elements": "^3.4.3",
